samples/_failures_safe/1761538819_499663_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d80aa313.c: In function ‘main’:
./samples/SAFE/__tmp_d80aa313.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
